src/test/resources/errors/InvariantError.mch
MACHINE InvariantError
VARIABLES x
INVARIANT x = 1
INITIALISATION x := 1
OPERATIONS
foo = PRE x = 1 THEN x:= 2 END 
END